<!--
  ~  Copyright 2018 Keval Patel.
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~  http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  ~
  -->

<resources>

    <string name="login_using_email">Login using email</string>
    <string name="sample_text">Sample text.</string>
    <string name="tag_line">Sitting is next cancer.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="create_account">Create account</string>
    <string name="error_google_signin_fail">Cannot login with Google account.</string>
    <string name="error_facebook_signin_fail">Cannot login with Facebook account.</string>
    <string name="error_retry_try_again">Try Again</string>
    <string name="error_google_login_email_not_found">Cannot authenticate you with Google. Try creating new account or logging with email.</string>
    <string name="error_fb_login_email_not_found">Cannot authenticate you with Facebook. Try creating new account or logging with email.</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="login_create_account">Create account</string>
    <string name="login_already_account">Already have account?</string>
    <string name="login_with_email_sign_in">Login</string>
    <string name="error_login_invalid_email">Enter valid email address.</string>
    <string name="error_invalid_height">Invalid height.</string>
    <string name="error_invalid_weight">Invalid weight.</string>
    <string name="login_error_password_did_not_match">Password did not match.</string>
    <string name="login_with_email_create_account">Create account</string>
    <string name="error_login_invalid_name">Enter valid name.</string>
    <string name="error_login_invalid_password">Enter valid password.</string>
    <string name="register_device_service_notification_message">Registering your device.</string>
    <string name="btn_title_forgot_password">Forgot Password?</string>
    <string name="verify_email_send_screen_title">Check your mail</string>
    <string name="message_verification_email_sent">Verification email sent successfully.</string>
    <string name="open_mail">Open mail</string>
    <string name="resend_mail">Resend Mail</string>
    <string name="skip">Skip</string>
    <string name="verify_email_screen_message">We sent an email to you at %s. It has a link that will verify your email address.</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="submit">Submit</string>
    <string name="error_unauthorised_response">Looks like your session has been expired. Please login again.</string>
    <string name="verify_email_link_description_verifying">Verifying your email…</string>
    <string name="verify_email_link_success">Your email verified successfully.</string>
    <string name="verify_email_link_fail">Verification failed.</string>
    <string name="logout_successful_message">Logout successful.</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_heading">Gender:</string>
    <string name="profile_weight_picker_title">Weight:</string>
    <string name="profile_height_picker_title">Height:</string>
    <string name="profile_name_hint">Name</string>
    <string name="title_activity_user_profile">Profile</string>
    <string name="message_profile_updated">Profile updated successfully.</string>
    <string name="menu_save">Save</string>
    <string name="forgot_password_successful">Password reset link sent to you on email. Please check your email</string>
    <string name="btn_title_open_mail">Open Mail</string>
    <string name="nav_header_home">Home</string>
    <string name="nav_header_dairy">Dairy</string>
    <string name="nav_header_stats">Statistics</string>
    <string name="nav_header_settings">Setting</string>
    <string name="nav_header_profile">Profile</string>
    <string name="nav_header_logout">Logout</string>
    <string name="nav_header_about">About</string>
    <string name="setting_up_your_device">Setting up your device…</string>
    <string name="device_reg_error_invalid_device_id">Invalid device id.</string>
    <string name="device_reg_error_invalid_fcm_id">Invalid id.</string>
    <string name="invitation_title">Checkout this awesome \"Stand Up\" app</string>
    <string name="invitation_message">I am using this Stand Up app. <!--TODO Add some marketing stuff!!!-->
        Check this out.</string>
    <string name="invitation_cta">Invite</string>
    <string name="about_check_for_update">Checking for the update…</string>
    <string name="check_update_error_message">Cannot check for updates.</string>
    <string name="check_update_new_update_available">New version is available.</string>
    <string name="alert_title_whats_new">What\'s new?</string>
    <string name="support_with_2_00">Support with $2.00</string>
    <string name="support_with_5_00">Support with $5.00</string>
    <string name="support_with_10_00">Support with $10.00</string>
    <string name="support_with_20_00">Support with $20.00</string>
    <string name="title_activity_support_development">Support Development</string>
    <string name="title_activity_report_issue">Report Issue</string>
    <string name="report_issue_description_hint">Description</string>
    <string name="report_issue_title_hint">Title</string>
    <string name="report_issue_update_message">New version of the application is available on the play store with improvements and bug fixes. Please update the application.</string>
    <string name="report_issue_update_title">Update Available</string>
    <string name="report_issue_update_later_btn_title">Later</string>
    <string name="report_issue_update_btn_title">Update</string>
    <string name="error_invalid_issue_title">Provide title to your issue.</string>
    <string name="error_invalid_issue_description">Please describe the issue.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="btn_title_retry">Retry</string>
    <string name="today_summary_heading_since_today_midnight">Since today midnight…</string>
    <string name="error_message_report_issue">Cannot report the issue.</string>
    <string name="issue_success_alert_title">Issue reported.</string>
    <string name="issue_success_alert_message">Your issue id: %d</string>
    <string name="report_issue_reporting_message">Reporting issue</string>
    <string name="dashboard_today_summary_not_fount">No activity found today.</string>
    <string name="message_resending_verification_email">Resending the verification email…</string>

    <string name="title_activity_sync_settings">Sync Settings</string>
    <string name="title_activity_dnd_settings">DND Settings</string>
    <string name="title_activity_notification_settings">Notifications Settings</string>
    <string name="title_activity_daily_review_settings">Daily Review Settings</string>
    <string name="pref_title_sync_now">Sync now</string>
    <string name="switch_on">On</string>
    <string name="switch_off">Off</string>
    <string name="pref_summary_sync_now">You last synced %s ago, tap here to force manual sync.</string>
    <string name="pref_summary_sync_now_never_synced">Never synced before, tap here to force manual sync.</string>
    <string name="pref_title_logged_in_as">Logged in as %s</string>
    <string name="pref_title_sync_in_background">Sync your activities in background</string>
    <string name="pref_title_sync_in_background_summary_on">Application will periodically sync your activities with the server.</string>
    <string name="pref_title_sync_in_background_summary_off">Application won\'t sync your activities with the server when application is in the background.</string>
    <string name="pref_syncing">Syncing…</string>
    <string name="sign_out_warning_positive_btn_title">Sign out</string>
    <string name="sign_out_warning_title">Sign out</string>
    <string name="sign_out_warning_message">Are you sure you want to sign out from the application?</string>
    <string name="reminder_ringtone_picker_dialog_title">Pick notification tone</string>
    <string name="dnd_pref_auto_dnd_switch_summary_on">Application will turn into DND mode automatically between %s.</string>
    <string name="dnd_pref_auto_dnd_switch_summary_off">Do not disturb mode won\'t start automatically. You can turn it on on/off manually though.</string>
    <string name="dnd_pref_auto_dnd_switch_title_off">Disable</string>
    <string name="dnd_pref_auto_dnd_switch_title_on">Enable</string>
    <string name="notification_update_title">New update is available.</string>
    <string name="view_user_activity_list">View activities</string>
    <string name="title_activity_user_activity_list">User activities</string>
    <string name="error_invalid_verification_link">Invalid verification link.</string>
    <string name="error_user_already_verified">User already verified.</string>
    <string name="set_up_complete">Setup complete.</string>
    <string name="set_up_failed">Setup failed.</string>
    <string name="copied_to_clip_board">Copied to clipboard.</string>
    <string name="prefer_old_school_email"><u>Prefer old school email?</u></string>
    <string name="open_email_bottom_dialog_title">Select application</string>
    <string name="about_rate_this_app">Rate this app</string>
    <string name="about_report_issue_title">Report an issue</string>
    <string name="about_report_issue_subtitle">Are you facing any issue? Report it here.</string>
    <string name="about_support_developement_title">Support Development</string>
    <string name="about_share_with_friends_title">Share with friends</string>
    <string name="about_suppet_us_card_title">Support Us</string>
    <string name="about_check_version_title">Check version</string>
    <string name="about_open_source_libs_title">Open source libraries</string>
    <string name="about_author_name_title">Keval Patel</string>
    <string name="about_author_github_title">Follow on GitHub</string>
    <string name="about_author_twitter_title">Follow on Twitter</string>
    <string name="about_author_join_slack_title">Join Slack</string>
    <string name="about_app_twitter_title">Follow on Twitter</string>
    <string name="about_app_connect_with_us_title">Connect with us</string>
    <string name="about_app_send_email_title">Send an Email</string>

    <!-- TODO: remove this placeholder text -->
</resources>
