<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checkable="true"
            android:icon="@drawable/ic_home_black"
            android:title="@string/nav_header_home" />

        <item
            android:id="@+id/nav_diary"
            android:checkable="true"
            android:icon="@drawable/ic_diary_black"
            android:title="@string/nav_header_dairy" />

        <item
            android:id="@+id/nav_stats"
            android:checkable="true"
            android:icon="@drawable/ic_stats_black"
            android:title="@string/nav_header_stats" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:checkable="true"
            android:icon="@drawable/ic_settings_black"
            android:title="@string/nav_header_settings" />

        <item
            android:id="@+id/nav_about"
            android:checkable="true"
            android:icon="@drawable/ic_info_black"
            android:title="@string/nav_header_about" />
    </group>
</menu>