<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2017 Keval Patel.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_intro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/md_activity_vertical_margin"
    android:paddingLeft="@dimen/md_activity_horizontal_margin"
    android:paddingRight="@dimen/md_activity_horizontal_margin"
    android:paddingTop="@dimen/md_activity_vertical_margin">

    <!--Sign in with Google button-->
    <com.kevalpatel2106.base.BaseButton
        android:id="@+id/btn_login_google_signin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/md_button_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:backgroundTint="@android:color/white"
        android:text="@string/sign_in_with_google"
        android:textAlignment="center"
        android:textColor="?android:attr/textColorPrimary" />

    <com.kevalpatel2106.base.BaseButton
        android:id="@+id/btn_login_using_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/md_button_height"
        android:layout_above="@id/btn_login_google_signin"
        android:backgroundTint="?attr/colorAccent"
        android:text="@string/login_using_email" />

    <com.kevalpatel2106.base.BaseButton
        android:id="@+id/btn_create_account"
        android:layout_width="match_parent"
        android:layout_height="@dimen/md_button_height"
        android:layout_above="@id/btn_login_using_email"
        android:layout_marginTop="@dimen/spacing_small"
        android:backgroundTint="?attr/colorPrimaryDark"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textColor="@android:color/white" />

    <!--Divider-->
    <View
        android:id="@+id/login_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/btn_create_account"
        android:layout_marginTop="@dimen/spacing_large"
        android:background="@android:color/white" />

    <!--intro view pager-->
    <android.support.v4.view.ViewPager
        android:id="@+id/intro_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/login_divider" />
</RelativeLayout>
