<?xml version="1.0" encoding="utf-8"?><!--
  ~  Copyright 2018 Keval Patel.
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~  http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  ~
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/colorWindowBackground"
    tools:context="com.standup.app.authentication.verification.VerifyEmailActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.kevalpatel2106.common.view.BaseButton
        android:id="@+id/verify_btn_resend"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_small"
        android:background="@drawable/rect_round_corner_white_stroke"
        android:text="@string/resend_mail"
        android:textAppearance="@style/MediumText.Primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="parent" />

    <com.kevalpatel2106.common.view.BaseButton
        android:id="@+id/verify_btn_skip"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_small"
        android:layout_marginEnd="@dimen/spacing_small"
        android:layout_marginStart="@dimen/spacing_small"
        android:background="@drawable/rect_round_corner_white_stroke"
        android:text="@string/skip"
        android:textAppearance="@style/MediumText.Primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline9" />

    <com.kevalpatel2106.common.view.BaseImageView
        android:id="@+id/verify_iv_email"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_margin="@dimen/md_activity_horizontal_margin"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/verify_title_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.503"
        app:srcCompat="@drawable/ic_verify_email" />

    <com.kevalpatel2106.common.view.BaseTextView
        android:id="@+id/verify_title_text"
        style="@style/LargeText.Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/md_activity_horizontal_margin"
        android:gravity="center_horizontal"
        android:text="@string/verify_email_send_screen_title"
        app:layout_constraintBottom_toTopOf="@+id/verify_description_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.kevalpatel2106.common.view.BaseTextView
        android:id="@+id/verify_description_text"
        style="@style/MediumText.Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_small"
        android:layout_marginEnd="@dimen/md_activity_horizontal_margin"
        android:layout_marginStart="@dimen/md_activity_horizontal_margin"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/verify_btn_open_mail_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="We sent an email to you at test@example.com. It has a link that will verify your email address." />

    <com.kevalpatel2106.common.view.BaseButton
        android:id="@+id/verify_btn_open_mail_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:background="?attr/colorPrimaryDark"
        android:paddingEnd="@dimen/spacing_large"
        android:paddingStart="@dimen/spacing_large"
        android:text="@string/open_mail"
        app:layout_constraintBottom_toTopOf="@+id/verify_btn_resend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>
