<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="?android:toolbarStyle">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            app:expandedTitleGravity="bottom|center"
            app:expandedTitleMarginBottom="100dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="@string/title_activity_report_issue">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:theme="?android:toolbarStyle"
                app:layout_collapseMode="pin"/>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_small"
        android:layout_marginStart="@dimen/spacing_small"
        app:behavior_overlapTop="64dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/spacing_large"
            android:paddingTop="@dimen/spacing_large">

            <android.support.v7.widget.CardView
                android:id="@+id/report_issue_title_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:layout_marginEnd="@dimen/spacing_small"
                android:layout_marginStart="@dimen/spacing_small"
                android:foreground="?selectableItemBackground"
                app:cardBackgroundColor="@color/cardview_dark_background"
                app:contentPadding="@dimen/spacing_large">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/report_issue_title_tiv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.kevalpatel2106.base.view.BaseEditText
                        android:id="@+id/report_issue_title_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/report_issue_title_hint"/>
                </android.support.design.widget.TextInputLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/report_issue_description_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:layout_marginEnd="@dimen/spacing_small"
                android:layout_marginStart="@dimen/spacing_small"
                android:foreground="?selectableItemBackground"
                app:cardBackgroundColor="@color/cardview_dark_background"
                app:contentPadding="@dimen/spacing_large">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/report_issue_description_tiv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.kevalpatel2106.base.view.BaseEditText
                        android:id="@+id/report_issue_description_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/report_issue_description_hint"/>
                </android.support.design.widget.TextInputLayout>
            </android.support.v7.widget.CardView>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/submit_issue_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/spacing_small"
                android:src="@drawable/ic_send_black"
                android:tint="@android:color/white"
                app:backgroundTint="?android:attr/colorPrimary"
                app:elevation="4dp"
                app:fabSize="normal"
                app:rippleColor="?android:attr/colorPrimaryDark"
                app:useCompatPadding="true"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>